blockml/test/errors/11_report/e96/e96m.model
model: e96m
joins:
- from_view: e96_one
  as: a
